# files

./: .buildconfig  .bzrignore  .editorconfig  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  Config.vala.cmake  FUNDING.yml  HACKING  INSTALL  INSTALL_maverick  Makefile.am  README  README.md  SUPPORT.md  TODO  async-io-coroutine.h  autogen.sh  config.h.cmake  config.h.in  config.vala.cmake  configure.ac  dropbox-client-util.c  dropbox-client-util.h  dropbox-client.c  dropbox-client.h  dropbox-command-client.c  dropbox-command-client.h  dropbox-hooks.c  dropbox-hooks.h  dropbox.plug  dropbox.plug.cmake  g-util.h  io.elementary.files.policy.xml.meson.in  io.elementary.files.yml  meson.build  meson_options.txt  notes  (+4 more)
data/: CMakeLists.txt  Makefile.am  files.gresource.xml  files.metainfo.xml.in.in  io.elementary.files-filemanager1.service.cmake  io.elementary.files-filemanager1.service.in  io.elementary.files-filemanager1.service.meson.in  io.elementary.files-pkexec.cmake  io.elementary.files-pkexec.in  io.elementary.files-pkexec.meson.in  io.elementary.files.appdata.xml.in  io.elementary.files.appdata.xml.in.in  io.elementary.files.desktop.cmake.in  io.elementary.files.desktop.in  io.elementary.files.desktop.in.in  io.elementary.files.policy.in.in  io.elementary.files.policy.xml.in.in  io.elementary.files.service.cmake  io.elementary.files.service.in  io.elementary.files.service.meson.in  io.elementary.files4-pkexec.in  io.elementary.files4.appdata.xml.in.in  io.elementary.files4.desktop.in.in  io.elementary.files4.policy.in.in  marlin.desktop.in  marlin.service.cmake  marlin.service.in  meson.build  net.launchpad.pantheon-files.policy.cmake  net.launchpad.pantheon-files.policy.xml.in.in  org.pantheon.files.appdata.xml  org.pantheon.files.appdata.xml.in  pantheon-files-filemanager1.service.cmake  pantheon-files-pkexec.cmake  pantheon-files.appdata.xml  pantheon-files.desktop.in  pantheon-files.service.cmake
data/schemas/: CMakeLists.txt  gschemas.compiled  io.elementary.file-chooser.gschema.xml  io.elementary.files.gschema.xml  io.elementary.files4.gschema.xml  org.pantheon.files.gschema.xml
data/styles/: Application.css  ColorButton.css  DiskRenderer.css  GridViewFileItem.css  SidebarExpander.css
data/ui/: GridView.ui  ListView.ui  View.ui  Window.ui
filechooser-module/: CMakeLists.txt  FileChooserDialog.vala  LocationBar.vala  LocationBarAbstract.vala  LocationBarChooser.vala  Plugin.vala  meson.build
filechooser-portal/: ExternalWindow.vala  FileChooser.vala  FileChooserChoice.vala  FileChooserDialog.vala  FileChooserDialogTester.vala  LegacyFileChooserDialog.vala  Main.vala  Request.vala  io.elementary.files.portal  io.elementary.files.xdg-desktop-portal.service.in  io.elementary.files4.xdg-desktop-portal.service.in  main.vala  meson.build  org.freedesktop.impl.portal.desktop.elementary.files.service.in
filechooser-portal/tests/: PortalTester.vala  io.elementary.Files.PortalTester.yml  meson.build
hw/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  hw.c
icons/: CMakeLists.txt  Makefile.am
libcore/: AbstractSidebar.vala  AbstractSlot.vala  BasicAbstractDirectoryView.vala  BasicAbstractTreeView.vala  BasicSlot.vala  BasicTextRenderer.vala  Bookmark.vala  BookmarkList.vala  BreadcrumbIconMap.vala  CMakeLists.txt  CallWhenReady.vala  ClipboardManager.vala  ConnectServerDialog.vala  ConnectServerOperation.vala  DeepCount.vala  Directory.vala  DirectoryAsync.vala  DndHandler.vala  Enums.vala  EventUtils.vala  File.vala  FileChanges.vala  FileChooserPreferences.vala  FileConflictDialog.vala  FileFilter.vala  FileUtils.vala  IconInfo.vala  ListModel.vala  Makefile.am  MimeActions.vala  Permissions.vala  PixbufUtils.vala  Plugin.vala  PluginItem.vala  PluginManager.vala  PopupMenuBuilder.vala  Preferences.vala  ProfilerUtils.vala  ProgressInfo.vala  ProgressInfoManager.vala  (+126 more)
libcore/Dialogs/: AbstractPropertiesDialog.vala  ChooseAppDialog.vala  PropertiesWindow.vala  VolumePropertiesWindow.vala
libcore/FileChooser/: FileChooserDialog.vala  FileChooserWidget.vala
libcore/FileOperations/: CommonJob.vala  CopyMoveJob.vala  CreateJob.vala  DeleteJob.vala  DialogUtils.vala  EmptyTrashJob.vala  MountUtils.vala
libwidgetgrid/: AbstractItemFactory.vala  LayoutHandler.vala  SelectionFrameRectangle.vala  SimpleModel.vala  View.vala  WidgetData.vala  meson.build
libwidgets/: AdvancedMenuToolButton.vala  AnimatedRenderer.vala  Animations.vala  AppMenu.vala  BreadcrumbsElements.vala  BreadcrumbsEntry.vala  CMakeLists.txt  CollapsablePaned.vala  CompositedWindow.vala  FileUtils.vala  ImgEventBox.vala  LocationBar.vala  Makefile.am  MimeActions.vala  ModeButton.vala  PoofWindow.vala  PopupLocationBar.vala  Resources.vala  SearchResults.vala  StaticNotebook.vala  ToolButtonWithMenu.vala  Welcome.vala  XsEntry.vala  meson.build  pantheon-files-widgets.deps  pantheon-files-widgets.pc.cmake
marlin-daemon/: CMakeLists.txt  Makefile.am  client.vala  marlind-tagging.vala
pantheon-files-daemon/: CMakeLists.txt  DriveManager.vala  FileManager1.vala  client.vala  main.vala  marlind-tagging.vala  meson.build  miner.vala
schemas/: CMakeLists.txt  org.gnome.marlin.gschema.xml  org.gnome.marlin.plugins.gschema.xml  org.pantheon.files.gschema.xml  org.pantheon.files.plugins.gschema.xml
src/: AbstractEditableLabel.vala  AppMenu.vala  Application.vala  Bookmark.vala  BookmarkList.vala  CMakeLists.txt  ClipboardManager.vala  ConnectServerOperation.vala  DesktopLauncher.vala  DndHandler.vala  EditableLabel.vala  EmblemRenderer.vala  Enums.vala  IconRenderer.vala  Logger.vala  Makefile.am  Miller.vala  MillerView.vala  MimeActions.vala  MultiLineEditableLabel.vala  ProgressInfoWidget.vala  ProgressUIHandler.vala  QuicklistHandler.vala  SingleLineEditableLabel.vala  Slot.vala  TextRenderer.vala  Thumbnailer.vala  UnityQuicklistHandler.vala  ViewContainer.vala  Window.vala  ZeitgeistManager.vala  appmenu.ui  config.h.in  eel-debug.c  eel-editable-label.c  eel-editable-label.h  eel-fcts.c  eel-fcts.h  eel-gdk-extensions.h  eel-gdk-pixbuf-extensions.c  (+125 more)
(+827 files in other folders)
