option('with-zeitgeist', type : 'feature', value : 'auto', description : 'Add Zeitgeist support')
option('systemduserunitdir', type: 'string', value: '', description: 'custom directory for systemd user units, or \'no\' to disable')
option('cpu-profiling-enabled', type : 'boolean', value : false, description: 'Enable cpu profiling')
option('heap-profiling-enabled', type : 'boolean', value : false, description: 'Enable heap profiling')
